# obt_api_salas

./: .gitignore  README.md
app/: .env.example  .gitignore  README.md  __init__.py  api.py  app.py  config.py  db.py  main.py  pyproject.toml  requirements.txt
app/api/: routes.py
app/database/: __init__.py  connection.py
app/database/sql/inserts/: 01_insert_generos.sql  02_insert_peliculas.sql  03_insert_salas.sql  04_insert_butacas.sql  05_insert_funciones.sql  06_insert_reservas.sql
app/database/sql/procedures/: sp_reporte_ocupacion_por_pelicula.sql
app/sql/: set_up_db.sql
app/sql/procedures/: sp_determinar_precio_entrada.sql  sp_reporte_ocupacion_por_pelicula.sql  sp_reservar_butaca_con_validacion_dni.sql
app/swagger/: precios.yml  reporte_ocupacion.yml  reservas.yml
app/tests/: README.md  conftest.py  test_precios.py  test_reporte.py  test_reservas.py
app/utils/: validators.py
