[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "obt-api"
version = "1.0.0"
description = "API de Reservas de Cine"
requires-python = ">=3.8"
dependencies = [
    "Flask>=2.2.5",
    "mysql-connector-python>=8.0.33",
    "python-dotenv>=1.0.0",
    "flasgger>=0.9.7",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-flask>=1.2.0",
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
